@@ -1,0 +1,21 @@
+{namespace s=Causal\Sphinx\ViewHelpers}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<title>ACE in Action</title>
+	<style type="text/css" media="screen">
+		#editor {
+			position: absolute;
+			top: 30px;
+			right: 0;
+			bottom: 0;
+			left: 0;
+		}
+	</style>
+</head>
+<body>
+
+<s:restEditor filename="{filename}"/>
+
+</body>
+</html>
