@@ -59,9 +59,7 @@
 							<a href="../../Index.html" title="{extension.title} {extension.release}">Docstart</a>
 						</li>
 						<li>
-							<a href="../../_sources/Main/UsersManual/Index.txt" rel="nofollow">
-								Edit Source
-							</a>
+							<f:link.action action="edit" arguments="{extension: extension.extensionKey, document: document}">Edit Source</f:link.action>
 						</li>
 						<li>
 							<a href="{documentation.generalIndex.url}" title="{documentation.generalIndex.url}" accesskey="I">index</a>
@@ -94,9 +92,7 @@
 							<a href="../../Index.html" title="{extension.title} {extension.release}">Docstart</a>
 						</li>
 						<li>
-							<a href="../../_sources/Main/UsersManual/Index.txt" rel="nofollow">
-								Edit Source
-							</a>
+							<f:link.action action="edit" arguments="{extension: extension.extensionKey, document: document}">Edit Source</f:link.action>
 						</li>
 						<li>
 							<a href="{documentation.generalIndex.url}" title="{documentation.generalIndex.url}">index</a>
