@@ -12,7 +12,7 @@
 
 $EM_CONF[$_EXTKEY] = array(
 	'title' => 'Sphinx Python Documentation Generator',
-	'description' => 'One-click install Sphinx generator for your TYPO3 website. This extension builds ReStructuredText documentation (format of official TYPO3 manuals).',
+	'description' => 'One-click install Sphinx generator for your TYPO3 website. This extension builds ReStructuredText documentation (format of official TYPO3 manuals), renders other extension manuals and provides an integrated editor for your own documentation.',
 	'category' => 'service',
 	'author' => 'Xavier Perseguers',
 	'author_company' => 'Causal Sàrl',
